--- a/styles.css
+++ b/styles.css
@@ -32,7 +32,7 @@ body {
     font-family: Futura;  
 }
 .span1{
-    color: Black;
+    color: red;
 }
 .headerp{
 color: black;
@@ -69,7 +69,7 @@ color: black;
 }
 img{
     width: 250px;
-    height: 150px;
+    height: 350px;
     border-radius: 50px;
    text-align: center;
    
@@ -109,7 +109,7 @@ h2{
          }
 .img1{
    width: 50%;
-   height: 50%;
+   height: 55%;
 }
 .p1{
     font-weight: 400;
